MGA should not be opening a link, and should be return a link to be used instead.